--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="barra_news">News</string>
     <string name="barra_eventos">Eventos</string>
     <string name="url_lista_eventos">http://www.dev42.com.br/ironlife/app/rest/listar_eventos/</string>
+    <string name="url_cria_evento">http://www.dev42.com.br/ironlife/app/rest/criar_evento/</string>
     <string name="url_lista_eventos_local">http://10.1.1.105/ironlife/app/rest/listar_eventos/</string>
+    <string name="url_cria_evento_local">http://10.1.1.105/ironlife/app/rest/criar_evento/</string>
 </resources>
