--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="check_salvar_dados">Salvar dados</string>
     <string name="barra_news">News</string>
     <string name="barra_eventos">Eventos</string>
+    <string name="barra_alistados">Guardiões Alistados</string>
 
 </resources>
